# serializer version: 1
# name: TestFormatRun.test_format_canceled_run_json_output[0]
  dict({
    'created_at': 1705311000.0,
    'ended_at': 1705311120.0,
    'id': 'canceled-run-789',
    'job_name': 'canceled_pipeline',
    'started_at': 1705311060.0,
    'status': 'CANCELED',
  })
# ---
# name: TestFormatRun.test_format_canceled_run_text_output[0]
  '''
  Run ID: canceled-run-789
  Status: CANCELED
  Created: 1705311000.0
  Started: 1705311060.0
  Ended: 1705311120.0
  Pipeline: canceled_pipeline
  '''
# ---
# name: TestFormatRun.test_format_failed_run_json_output[0]
  dict({
    'created_at': 1705311000.0,
    'ended_at': 1705311180.0,
    'id': 'failed-run-456',
    'job_name': 'failing_pipeline',
    'started_at': 1705311060.0,
    'status': 'FAILURE',
  })
# ---
# name: TestFormatRun.test_format_failed_run_text_output[0]
  '''
  Run ID: failed-run-456
  Status: FAILURE
  Created: 1705311000.0
  Started: 1705311060.0
  Ended: 1705311180.0
  Pipeline: failing_pipeline
  '''
# ---
# name: TestFormatRun.test_format_minimal_run_json_output[0]
  dict({
    'created_at': 1705311000.0,
    'ended_at': None,
    'id': 'minimal-run-123',
    'job_name': None,
    'started_at': None,
    'status': 'QUEUED',
  })
# ---
# name: TestFormatRun.test_format_minimal_run_text_output[0]
  '''
  Run ID: minimal-run-123
  Status: QUEUED
  Created: 1705311000.0
  '''
# ---
# name: TestFormatRun.test_format_run_json_output[0]
  dict({
    'created_at': 1705311000.0,
    'ended_at': 1705311900.0,
    'id': '123e4567-e89b-12d3-a456-426614174000',
    'job_name': 'my_pipeline',
    'started_at': 1705311060.0,
    'status': 'SUCCESS',
  })
# ---
# name: TestFormatRun.test_format_run_text_output[0]
  '''
  Run ID: 123e4567-e89b-12d3-a456-426614174000
  Status: SUCCESS
  Created: 1705311000.0
  Started: 1705311060.0
  Ended: 1705311900.0
  Pipeline: my_pipeline
  '''
# ---
# name: TestRunDataProcessing.test_run_creation_with_all_fields[0]
  dict({
    'created_at': 1705311000.0,
    'ended_at': None,
    'id': 'complete-run-xyz',
    'job_name': 'comprehensive_pipeline',
    'started_at': 1705311060.0,
    'status': 'STARTING',
  })
# ---
